<resources>
    <string name="app_name">Stoic\'s Diary</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- https://developer.android.com/guide/topics/resources/string-resource.html#FormattingAndStyling -->
    <string name="app_about_text" formatted="true">
        &lt;p>
        &lt;b>This&lt;/b> is where I type a lot of text about the application.
        &lt;/p>
        &lt;br/>
        &lt;p>
        I\'m going to have a couple of paragraphs, maybe, and at the bottom
        I\'ll append the version number and I guess some copyright information.
        &lt;/p>
        &lt;br/>
        &lt;br/>
        &lt;p>
        Version %s
        &lt;/p>
    </string>
    <string name="app_reset_db" formatted="true">
        This is the text warning about clearing out the database. Blah, blah, blah.
    </string>

    <!-- Fragment text -->
    <string name="fragment_choice">Choice fragment</string>
    <string name="fragment_history">History fragment</string>
    <string name="fragment_summary">Summary fragment</string>

    <!-- Themed strings for translation -->
    <string name="theme_color_01_name">Basic Color Theme</string>
    <string name="theme_color_02_name">Unhelpful Theme</string>
    <string name="theme_color_03_name">Ugly Color Theme</string>

    <string name="theme_text_01_name">Basic Text Theme</string>
    <string name="theme_text_01_prompt">Was today a good day? You choose.</string>
    <string name="theme_text_01_good">Yes</string>
    <string name="theme_text_01_bad">No</string>

    <string name="theme_text_02_name">Vulcan Text Theme</string>
    <string name="theme_text_02_prompt">Was today fascinating?</string>
    <string name="theme_text_02_good">Indeed</string>
    <string name="theme_text_02_bad">Negative</string>

    <string name="theme_text_03_name">Iconography Theme</string>
    <string name="theme_text_03_prompt">&#129335;</string>
    <string name="theme_text_03_good">&#x1f44d;</string>
    <string name="theme_text_03_bad">&#x1f44e;</string>

    <string name="choice_buttons_disabled">You can only set a choice for any given day three times.</string>
    <string name="feels_prompt_enabled">Write your thoughts on this day&#8230;\nin 140 characters or less.</string>
    <string name="feels_prompt_disabled">Write your thoughts on this day&#8230;\nonce you make your choice.</string>
    <string name="button_save">Save</string>
    <string name="button_tweet">Tweet</string>
    <string name="button_export">Export</string>
    <string name="button_theme">Rotate</string>
    <string name="menu_about">About Application</string>
    <string name="menu_settings">Settings</string>

    <string name="export_email_subject">Your Stoic\'s Diary History from Appolonious</string>
    <string name="export_email_body">The attached CSV file contains the data from your Stoic Diary (insert web link here).</string>
    <string name="export_email_intent">Export data in CSV format</string>
    <string name="export_email_salutation">Hey</string>
    <string name="export_email_name_unknown">friend</string>
    <string name="export_email_closing">Yours in Stoicity,</string>
    <string name="export_email_signature">Team</string>

    <string name="channel_id">sd_choice_01</string>
    <string name="channel_name">Stoic\'s Diary</string>
    <string name="channel_description">Make your choice for today?</string>
    <string name="notification_title">Are you ready to make a choice?</string>
    <string name="notification_text">Make your choice and perhaps write something to remind yourself about the day.</string>

    <string name="quote_01">“If you are distressed by anything external, the pain is not due to the thing itself, but to your estimate of it; and this you have the power to revoke at any moment.”\n ― Marcus Aurelius, Meditations</string>
    <string name="quote_02">“Never let the future disturb you. You will meet it, if you have to, with the same weapons of reason which today arm you against the present.”\n ― Marcus Aurelius, Meditations</string>
    <string name="quote_03">“Complaining does not work as a strategy. We all have finite time and energy. Any time we spend whining is unlikely to help us achieve our goals. And it won\'t make us happier.”\n ― Randy Pausch, The Last Lecture</string>
    <string name="quote_04">“It is the power of the mind to be unconquerable.”\n ― Seneca</string>
    <string name="quote_05">“Until we have begun to go without them, we fail to realize how unnecessary many things are. We\'ve been using them not because we needed them but because we had them.”\n ― Seneca, Letters from a Stoic</string>
    <string name="quote_06">“It is more necessary for the soul to be cured than the body; for it is better to die than to live badly.”\n ― Epictetus</string>

    <!-- Strings related to User statistics -->
    <string name="stat_title_earliest_choice_made">earliest_choice_made</string>
    <string name="stat_title_earliest_written_note">earliest_written_note</string>
    <string name="stat_title_latest_tweet">latest_tweet</string>
    <string name="stat_title_current_consecutive_choies">Current streak of consecutive choices</string>
    <string name="stat_title_maximum_consecutive_choices_made">Longest streak of consecutive choices</string>
    <string name="stat_title_count_choices_made">Number of choices made</string>
    <string name="stat_title_count_choices_changed">Number of times a choice was changed</string>
    <string name="stat_title_count_choices_locked">Number of choices locked from indecision</string>
    <string name="stat_title_count_choices_by_day_of_week">Count of choices made by day of week</string>
    <string name="stat_title_count_written_history_this_week">Notes written for the current week</string>
    <string name="stat_title_count_written_history_this_month">Notes written this month</string>
    <string name="stat_title_count_written_history_all_time">Number of notes written</string>
    <string name="stat_title_sum_value_choices_made_this_week">Sum of the choices made this week</string>
    <string name="stat_title_sum_value_choices_made_this_month">Sum of the choices made this month</string>
    <string name="stat_title_sum_value_choices_made_all_time">Sum of all choices made</string>
    <string name="stat_title_sum_value_by_day_of_week">Sum of all choices made by day of week</string>
    <string name="stat_title_choices_made_this_month">Choices made this month</string>

    <string-array name="stat_day_abbr">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <!-- Strings related to Settings -->
    <string name="pref_export_key">initiate_export</string>
    <string name="pref_export_title">Export data to CSV</string>
    <string name="pref_export_summary">Selecting this will generate a CSV and send it to any configured application</string>

    <string name="pref_reset_key">reset_db</string>
    <string name="pref_reset_title">Reset diary database</string>
    <string name="pref_reset_summary">Selecting this will delete the database</string>

    <string name="pref_debug_key">debug_mode</string>
    <string name="pref_debug_title">Debug Mode</string>
    <string name="pref_debug_summary">Allow additional UI / feature for testing.</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_color_theme">Select your color theme</string>
    <string-array name="pref_color_theme_titles">
        <item>@string/theme_color_01_name</item>
        <item>@string/theme_color_02_name</item>
        <item>@string/theme_color_03_name</item>
    </string-array>
    <string-array name="pref_color_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_text_theme">Select your text theme</string>
    <string-array name="pref_text_theme_titles">
        <item>@string/theme_text_01_name</item>
        <item>@string/theme_text_02_name</item>
        <item>@string/theme_text_03_name</item>
    </string-array>
    <string-array name="pref_text_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_choice_reminders">Reminders to make your choice</string>
    <string name="pref_title_choice_reminder_times">Hour to remind</string>
    <string name="pref_choice_reminder_disabled">Disabled</string>
    <!-- Internationalize the time titles -->
    <string-array name="pref_choice_reminder_titles">
        <item>@string/pref_choice_reminder_disabled</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
    </string-array>
    <string-array name="pref_choice_reminder_values">
        <item> </item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>

</resources>
