<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:key="displayName"
            android:defaultValue="@string/pref_default_display_name"
            android:title="@string/pref_title_display_name"
            android:capitalize="words"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <!-- key 'reminder_time' is bound in DataSyncPreferenceFragment onCreate -->
        <ListPreference
            android:key="reminder_time"
            android:defaultValue="0"
            android:title="@string/pref_title_choice_reminders"
            android:entries="@array/pref_choice_reminder_titles"
            android:entryValues="@array/pref_choice_reminder_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Themes">
        <ListPreference
            android:key="currentColorTheme"
            android:defaultValue="1"
            android:title="@string/pref_title_color_theme"
            android:entries="@array/pref_color_theme_titles"
            android:entryValues="@array/pref_color_theme_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />

        <ListPreference
            android:key="currentTextTheme"
            android:defaultValue="1"
            android:title="@string/pref_title_text_theme"
            android:entries="@array/pref_text_theme_titles"
            android:entryValues="@array/pref_text_theme_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Sync &amp; Data">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <Preference
            android:key="@string/pref_export_key"
            android:title="@string/pref_export_title"
            android:summary="@string/pref_export_summary" >
        </Preference>

        <Preference
            android:key="@string/pref_reset_key"
            android:title="@string/pref_reset_title"
            android:summary="@string/pref_reset_summary" >
            <!-- TO DO add confirmation dialog here -->
        </Preference>

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Support">
        <SwitchPreference
            android:key="@string/pref_debug_key"
            android:title="@string/pref_debug_title" />
    </PreferenceCategory>
    <!-- These should appear when the Debug Mode is enabled. Debug Mode can be shown based on some other attribute -->
    <PreferenceCategory android:key="debug_options">
        <Preference android:title="Some thing">

        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
