<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="displayName"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <!-- key 'reminder_time' is bound in DataSyncPreferenceFragment onCreate -->
        <ListPreference
            android:defaultValue=" "
            android:entries="@array/pref_choice_reminder_titles"
            android:entryValues="@array/pref_choice_reminder_values"
            android:key="reminder_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_choice_reminders" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_color_theme_titles"
            android:entryValues="@array/pref_color_theme_values"
            android:key="currentColorTheme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_color_theme" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_text_theme_titles"
            android:entryValues="@array/pref_text_theme_values"
            android:key="currentTextTheme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_text_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Sync &amp; Data">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <Preference android:id="@+id/BUTTON_EXPORT"
            android:key="@string/pref_export_key"
            android:title="@string/pref_export_title"
            android:summary="@string/pref_export_summary" >
            <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        </Preference>

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
