<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appollonius.stoicsdiary.HistoryFragment" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="-48dp"
        android:scaleX=".9"
        android:scaleY=".9">

        <CalendarView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/TEXT_QUOTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/GROUP_CHOICES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:start="@id/EDIT_FEELS"
            app:layout_constraintBottom_toTopOf="@+id/EDIT_FEELS"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/BUTTON_YES"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/choicebackground"
                android:backgroundTint="@android:color/holo_green_dark"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:text="@string/theme_text_01_good"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/BUTTON_NO"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/choicebackground"
                android:backgroundTint="@android:color/holo_red_dark"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:text="@string/theme_text_01_bad"
                android:textSize="30sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/EDIT_FEELS"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_above="@+id/BUTTON_FEELS_SAVE"
            android:layout_alignParentStart="true"
            android:background="#AAAAAA"
            android:hint="@string/feels_prompt_enabled"
            android:inputType="textMultiLine"
            android:labelFor="@+id/EDIT_FEELS"
            android:maxLength="140"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/BUTTON_FEELS_SAVE"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/BUTTON_FEELS_SAVE"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/BUTTON_FEELS_TWEET"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/BUTTON_FEELS_SAVE"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:text="@string/button_tweet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
